--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="landmarks">Landmarks</string>
     <string name="previous">PREVIOUS</string>
     <string name="next">NEXT</string>
+    <string name="profile_name">profile name</string>
 </resources>
